--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "nodemon": "~1.11.0"
     },
     "dependencies": {
-        "striptags": "~3.0.1"
+        "striptags": "~3.0.1",
+        "unescape": "~0.2.0"
     },
     "engines": {
         "node": ">= 4.0.0"
