--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint": "~3.16.1",
         "istanbul": "~0.4.5",
         "jasmine": "~2.5.3",
+        "jasmine-test-helpers": "~1.2.0",
         "nodemon": "~1.11.0"
     },
     "dependencies": {
