--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "description": "",
     "main": "lib/index.js",
     "scripts": {
+        "clean": "rm -rf coverage node_modules package-lock.json",
+        "readme": "jsdoc2md --template README.hbt --no-cache -f 'lib/**/*.js' --global-index-format grouped --param-list-format list > README.md",
         "test": "script/test",
-        "watch": "script/watch"
+        "watch": "nodemon --exec jasmine"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/connected-world-services/metalsmith-simple-search.git"
     },
-    "keywords": [
-    ],
+    "keywords": [],
     "author": "Tyler Akins <fidian@rumkin.com>",
     "license": "MIT",
     "bugs": {
@@ -25,9 +26,11 @@
         "istanbul": "~0.4.5",
         "jasmine": "~2.6.0",
         "jasmine-test-helpers": "~1.2.3",
+        "jsdoc-to-markdown": "^3.0.0",
         "nodemon": "~1.11.0"
     },
     "dependencies": {
+        "metalsmith-plugin-kit": "^1.0.1",
         "striptags": "~3.0.1",
         "unescape": "~0.2.0"
     },
