--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "metalsmith-simple-search",
-    "version": "1.2.2",
-    "description": "",
+    "version": "1.3.0",
+    "description": "Client-side searching for static sites. This generates a keyword index and adds the necessary searching code to your build.",
     "main": "lib/index.js",
     "scripts": {
         "clean": "rm -rf coverage node_modules package-lock.json",
